# pikascript-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pull.sh  test.sh  update.sh
dev-cpp-project/: Makefile.win  Project1.dev
gui/: hello.js  hello.ts  package-lock.json
mimiscript-python-api/: .mimiscript-api.py.swp  mimiscript-api.py
src/: mimiscript-api.py
src/boot/: main.c
src/boot/cli-msc/: main.c
src/boot/msc/: main.c
src/boot/msc-linux/: main.c
src/boot/msc-win/: main.c
src/package/: mimiscript-api.py
src/package/mimiScriptCompiler/: Compiler.c  Compiler.h  CompilerClass.c  CompilerClass.h  PyClass.c  PyClass.h  PyMethod.c  PyMethod.h  PyMethodClass.c  PyMethodClass.h  PyObj.c  PyObj.h  PyObjClass.c  PyObjClass.h  analyzer.c  analyzer.h  common.c  common.h  generator.c  generator.h  pyObj.c  pyObj.h
src/package/mimiscript-api/: CMakeLists.txt  Compiler-api.c  Compiler.h  PyClass-api.c  PyClass.h  PyMethod-api.c  PyMethod.h  PyObj-api.c  PyObj.h  Root.h  Test-api.c  Test.h
src/package/mimiscript-compiler/: CMakeLists.txt  Compiler.c  PyClass.c  PyMethod.c  PyObj.c  common.h  main.cpp
src/test/: CMakeLists.txt  args-test.cpp  com-test.cpp  compiler-test.cpp  link-test.cpp  object-test.cpp  test-mimiscript-api.py  test-mimiscript-api2.py  test-mimiscript-api3.py  test-mimiscript-api4.py  test-mimiscript-api5.py
src/test/coreTest/: main.cpp
src/test/test1/: main.c
winProject/: winProject.cbp
winProject/mimiscript-api/: Compiler-api.c
